<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:fillViewport="true">

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="20dp"
            android:orientation="vertical">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center">

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/local_user_id"
                    android:id="@+id/textViewUserIdLabel"
                android:layout_gravity="center_horizontal"
                android:padding="5dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textViewUserId"
                android:padding="5dp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/border"
                android:layout_margin="2dp"
                android:padding="10dp">

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent">

                <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:ems="10"
                    android:id="@+id/editTextFriendId"
                    android:hint="@string/friend_user_id" />

                <Button
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/add_friend"
                        android:id="@+id/buttonAddFriend"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginTop="10dp"/>
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/border"
                android:layout_margin="2dp"
                android:padding="10dp">

            <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/layoutButtons"
                android:gravity="center_horizontal">


                <Button
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/refresh_friends"
                        android:id="@+id/buttonRefresh"
                        android:paddingLeft="30dp"
                        android:paddingRight="30dp"/>

            </LinearLayout>

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/friend_list_title"
                    android:id="@+id/textViewFriendsLabel"
                    android:layout_marginTop="20dp"/>

            <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textMultiLine"
                    android:ems="10"
                    android:id="@+id/editTextFriends"
                    android:paddingTop="20dp"
                    android:focusable="false"
                    android:layout_gravity="center_horizontal"/>

        </LinearLayout>

    </LinearLayout>

</ScrollView>
